# icml26-repro-rZTiFcDihH-packet-scheduling

./: .gitignore  README.md  STATUS.md  pyproject.toml
.trackio/: metadata.json
.trackio/logbook/: index.html  logbook.json
.trackio/logbook/pages/: claim-1.md  claim-2.md  claim-3.md  claim-4.md  claim-5.md  claim-6.md  conclusion.md  index.md  methods.md  negative-controls.md
.trackio/logbook/pages/conclusion/: page.md
.trackio/logbook/pages/methods/: page.md
docs/: EVIDENCE.md
notebooks/: packet_scheduling_reproduction.py
outputs/: audit_stdout.json  claim_audit.json  publication_gate.json  source_sha256.txt
release/: upload_allowlist.txt  upload_manifest.sha256
release/hf_space_update/: logbook.json
release/hf_space_update/pages/: index.md
reports/packet-scheduling-claim-audit-2026-07-23/: approval_report.md  commands.md  report.md
reports/packet-scheduling-claim-audit-2026-07-23/data/: evidence.json
repro/: generate_report_figures.py  run_all.py  verify_space_subset.py
repro/src/: claim_campaign.py  falsification_campaign.py  model_check_campaign.py  packet_audit.py  proof_certificates.py  release_gate.py  stress_campaign.py
repro/tests/: test_packet_audit.py  test_stress_campaign.py
source/: arxiv-2606.00835v1.tar
source/tex/: biblio.bib  main.tex
source/tex/sections/: 0_abstract.tex  1_introduction.tex  2_problem_formulation.tex  2b_existing_results.tex  3_deterministic_algorithms.tex  4_randomized_algorithms.tex  5_discussion.tex  6_simulations.tex  challenges.tex  proofs.tex
source/tex/settings/: colors.tex  pkgs.tex
(+16 files in other folders)
