[project]
name = "packet-scheduling-reproduction"
version = "0.1.0"
description = "Clean-room reproduction of arXiv:2606.00835"
requires-python = ">=3.12,<3.13"
dependencies = [
  "marimo==0.14.17",
  "matplotlib==3.10.3",
  "numpy==2.3.1",
  "pytest==8.4.1",
  "z3-solver==4.15.1.0",
]

[tool.pytest.ini_options]
testpaths = ["repro/tests"]

[tool.uv]
package = false
